--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,10 +25,10 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install -y openjdk-17-jre-headless
-        apt-get install -y openjdk-17-jdk-headless
-        apt-get clean
+        sudo apt-get update
+        sudo apt-get install -y openjdk-17-jre-headless
+        sudo apt-get install -y openjdk-17-jdk-headless
+        sudo apt-get clean
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements_test.txt ]; then pip install -r requirements_test.txt; fi
