--- a/.dockerignore
+++ b/.dockerignore
@@ -7,5 +7,6 @@ resource/models/bilstm_crf
 resource/models/phobert_base
 resource/models/phobert_large
 resource/models/phobert_base_bilstm
+resource/models/phobert_base_bilstm_crf_0
 resource/models/phobert_large_bilstm
 resource/models/phobert_large_bilstm_crf
